objects/User.object
<CustomObject>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <relationshipName>ProjectManager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Out_of_office_Message__c</fullName>
        <label>Out of office Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Out_of_office_End_Date__c</fullName>
        <label>Out of office End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Out_of_office_Start_Date__c</fullName>
        <label>Out of office Start Date</label>
        <type>Date</type>
    </fields>
    <validationRules>
        <fullName>NoUsernameChangesAllowed</fullName>
        <active>true</active>
        <description>Changing usernames in this org may impact your ability to sign in automatically from Trailhead.</description>
        <errorConditionFormula>Username != PRIORVALUE(Username)</errorConditionFormula>
        <errorDisplayField>Username</errorDisplayField>
        <errorMessage>Please do not change usernames in the Trailhead Playground.</errorMessage>
    </validationRules>
</CustomObject>